<resources>
    <string name="app_name">ToGather</string>

    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_login">로그인</string>
    <string name="login_register">회원가입</string>
    <string name="login_change_pw">비밀번호 변경</string>

    <string name="menu_home">홈</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_post">글쓰기</string>
    <string name="menu_search">검색</string>
    <string name="menu_mypage">나</string>

    <string name="tag_all_tag">모든 태그 보기</string>
    <string name="tag_search">검색</string>

    <string name="post_title">제목</string>
    <string name="post_link">연락받을 링크</string>
    <string name="post_main">본문을 입력하세요</string>
    <string name="post_tag">모든 태그 보기</string>

    <string name="mypage_edit_info">계정 정보 수정</string>
    <string name="mypage_change_pw">비밀번호 변경</string>
    <string name="mypage_check_my_post">내 게시글 보기</string>
    <string name="mypage_developers">개발자들</string>
    <string name="mypage_logout">로그아웃</string>

    <string name="register_name">이름</string>
    <string name="register_email">dsm.hs.kr 도메인을 사용하는 이메일을 사용하세요</string>
    <string name="register_pw">8자리 이상, 숫자, 영어 소문자, 특수문자를 포함해야 합니다</string>
    <string name="register_next">다음</string>

    <string name="verify_email_code">인증번호</string>

    <string name="account_edit_save">저장</string>
    <string name="account_edit_delete">계정 삭제</string>
    <string name="account_edit_position">포지션</string>
    <string name="account_edit_change_img">이미지 변경</string>

    <string name="change_pw_title">비밀번호 변경</string>
    <string name="change_pw_des">인증번호를 받기 위한 이메일 주소가 필요합니다</string>

    <string name="auth_change_pw_des">계정에 입력된 이메일로 전송된 n자리 인증 번호를 입력해 주세요. 인증 번호는 5분 후에 만료됩니다</string>
    <string name="new_pw_des">바꿀 새 비밀번호를 입력해 주세요</string>

    <string name="delete_user_title">계정 삭제</string>
    <string name="delete_user_des">계정을 삭제하려면 비밀번호를 입력해 주세요.</string>
    <string name="delete_user_dialog_title">정말 계정을 삭제하시겠습니까?</string>
    <string name="delete_user_dialog_des">모든 입력한 정보, 작성한 글이 서버에서 삭제되며 이 작업은 되돌릴 수 없습니다.</string>
    <string name="delete_user_dialog_confirm">진행</string>
    <string name="delete_user_dialog_cancel">취소</string>

    <string name="detail_contact">연락하기</string>
    <string name="detail_delete">삭제</string>
    <string name="detail_edit">수정</string>
    <string name="detail_do_edit">수정하기</string>

    <string name="my_post_my_post">내 게시글 보기</string>
    <string name="chat_send">전송</string>
    <string name="create_room_bad_request">잘못된 요청</string>

    <string name="position_android">Android</string>
    <string name="position_iOS">iOS</string>
    <string name="position_pm">Pm</string>
    <string name="position_front">Front-end</string>
    <string name="position_designer">Designer</string>
    <string name="position_backend">Back-end</string>

</resources>