<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ChangePwActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/tv_change_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_title"
            android:textSize="32sp"
            android:fontFamily="@font/bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_change_pw_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_des"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_change_pw_title"
            app:layout_constraintTop_toBottomOf="@id/tv_change_pw_title"/>

        <EditText
            android:id="@+id/et_change_pw_email"
            style="@style/Theme.ToGather.EditText"
            android:layout_marginTop="24dp"
            android:hint="@string/login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_pw_des"/>

        <Button
            android:id="@+id/bt_change_pw_next"
            style="@style/Theme.ToGather.Button_White"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register_next"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>