<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AuthChangePwActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_auth_change_pw_title"
            style="@style/Theme.ToGather.TextView_Title_View"
            android:text="@string/change_pw_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_auth_change_pw_des"
            style="@style/Theme.ToGather.Textview_Title_Des"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/auth_change_pw_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_change_pw_title" />

        <EditText
            android:id="@+id/et_auth_change_pw_code"
            style="@style/Theme.ToGather.EditText"
            android:layout_marginTop="12dp"
            android:hint="@string/verify_email_code"
            android:maxLength="6"
            android:singleLine="true"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_change_pw_des" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/icon_verify_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_auth_change_pw_code" />

        <Button
            android:id="@+id/bt_auth_change_pw_next"
            style="@style/Theme.ToGather.Button_White"
            android:layout_marginBottom="34dp"
            android:text="@string/register_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>