<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="view.fragment.AccountEditFragment">

    <data>

        <variable
            name="user"
            type="com.tmdhoon.togather.viewmodel.MyInfoViewModel" />

        <variable
            name="AccountEditFragment"
            type="com.tmdhoon.togather.view.fragment.AccountEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="844dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="844dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_post_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/image_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cimg_account_edit_profile"
                    loadImage="@{user.myInfoResponse.body().profile_image_url}"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="72dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_account_edit_update_img"
                    style="@style/Theme.ToGather.Button_Yellow_Short"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/account_edit_change_img"
                    app:layout_constraintBottom_toBottomOf="@id/cimg_account_edit_profile"
                    app:layout_constraintStart_toEndOf="@id/cimg_account_edit_profile"
                    app:layout_constraintTop_toTopOf="@id/cimg_account_edit_profile" />

                <EditText
                    android:id="@+id/et_account_edit_name"
                    style="@style/Theme.ToGather.EditText"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{user.myInfoResponse.body().name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_account_edit_update_img" />

                <EditText
                    android:id="@+id/et_account_edit_email"
                    style="@style/Theme.ToGather.EditText"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:focusableInTouchMode="false"
                    android:text="@{user.myInfoResponse.body().email}"
                    android:textColor="@color/all_background_focusOut"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_account_edit_name" />

                <EditText
                    android:id="@+id/et_account_edit_introduce"
                    style="@style/Theme.ToGather.EditText"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{user.myInfoResponse.body().introduce}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_account_edit_email" />

                <TextView
                    android:id="@+id/tv_account_edit_position"
                    style="@style/Theme.ToGather.TextView_Title"
                    android:text="@string/account_edit_position"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/et_account_edit_introduce"/>

                <Button
                    android:id="@+id/bt_android"
                    style="@style/ButtonPosition"
                    android:text="@string/position_android"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_account_edit_position"
                    app:layout_constraintTop_toBottomOf="@id/tv_account_edit_position"/>

                <Button
                    android:id="@+id/bt_iOS"
                    style="@style/ButtonPosition"
                    android:text="@string/position_iOS"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bt_android"
                    app:layout_constraintStart_toEndOf="@+id/bt_android"
                    app:layout_constraintTop_toTopOf="@+id/bt_android" />

                <Button
                    android:id="@+id/bt_pm"
                    style="@style/ButtonPosition"
                    android:text="@string/position_pm"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bt_iOS"
                    app:layout_constraintStart_toEndOf="@+id/bt_iOS"
                    app:layout_constraintTop_toTopOf="@+id/bt_iOS" />

                <Button
                    android:id="@+id/bt_front"
                    style="@style/ButtonPosition"
                    android:text="@string/position_front"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bt_pm"
                    app:layout_constraintStart_toEndOf="@+id/bt_pm"
                    app:layout_constraintTop_toTopOf="@+id/bt_pm" />

                <Button
                    android:id="@+id/bt_designer"
                    style="@style/ButtonPosition"
                    android:layout_marginTop="8dp"
                    android:text="@string/position_designer"
                    app:layout_constraintStart_toStartOf="@+id/bt_android"
                    app:layout_constraintTop_toBottomOf="@+id/bt_android" />

                <Button
                    android:id="@+id/bt_back"
                    style="@style/ButtonPosition"
                    android:layout_marginStart="8dp"
                    android:text="@string/position_backend"
                    app:layout_constraintBottom_toBottomOf="@+id/bt_designer"
                    app:layout_constraintStart_toEndOf="@+id/bt_designer"
                    app:layout_constraintTop_toTopOf="@+id/bt_designer" />

                <Button
                    android:id="@+id/bt_account_edit_save"
                    style="@style/Theme.ToGather.Button_Yellow_Short"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/account_edit_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt_account_edit_delete_account"
                    style="@style/Theme.ToGather.Button_White_Short"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{()->AccountEditFragment.deleteUser()}"
                    android:paddingHorizontal="16dp"
                    android:text="@string/account_edit_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>