<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_login_image"
            android:layout_width="272dp"
            android:layout_height="114dp"
            android:layout_marginTop="204dp"
            android:src="@drawable/image_login"
            app:layout_constraintStart_toStartOf="@id/et_login_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_email"
            style="@style/Theme.ToGather.EditText"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login_image" />

        <EditText
            android:id="@+id/et_login_pw"
            style="@style/Theme.ToGather.EditText"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@id/et_login_email"
            app:layout_constraintStart_toStartOf="@id/et_login_email"
            app:layout_constraintTop_toBottomOf="@id/et_login_email" />

        <Button
            android:id="@+id/bt_login_login"
            style="@style/Theme.ToGather.Button_Yellow"
            android:layout_marginTop="12dp"
            android:text="@string/login_login"
            app:layout_constraintEnd_toEndOf="@id/et_login_pw"
            app:layout_constraintStart_toStartOf="@id/et_login_pw"
            app:layout_constraintTop_toBottomOf="@id/et_login_pw" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/bt_login_login"
            app:layout_constraintStart_toStartOf="@id/bt_login_login"
            app:layout_constraintTop_toBottomOf="@id/bt_login_login">

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:text="@string/login_register"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_login_changePw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_change_pw"
                android:textSize="18sp" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:src="@drawable/image_google_login"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/image_apple_login"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>