<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="844dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_post_close"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/image_close"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_post_title"
                        style="@style/Theme.ToGather.EditText"
                        android:layout_marginTop="16dp"
                        android:hint="@string/post_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_post_close" />

                    <EditText
                        android:id="@+id/et_post_link"
                        style="@style/Theme.ToGather.EditText"
                        android:layout_marginTop="16dp"
                        android:hint="@string/post_link"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_post_title" />
                    
                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/image_des"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintTop_toTopOf="@id/et_post_link"
                        app:layout_constraintBottom_toBottomOf="@id/et_post_link"
                        app:layout_constraintEnd_toEndOf="@id/et_post_link"/>

                    <EditText
                        android:id="@+id/et_post_main"
                        style="@style/Theme.ToGather.EditText"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:gravity="top"
                        android:hint="@string/post_main"
                        android:paddingTop="12dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toTopOf="@id/bt_post_post"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_post_link" />

                    <Button
                        android:id="@+id/bt_post_post"
                        style="@style/Theme.ToGather.Button_Yellow_Short"
                        android:text="@string/menu_post"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/et_post_main" />

                    <Button
                        android:id="@+id/bt_post_tag"
                        style="@style/Theme.ToGather.Button_White_Short"
                        android:paddingHorizontal="16dp"
                        android:text="@string/post_tag"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/et_post_main" />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>